[package]
name = "ruzzt_engine"
version = "0.1.0"
description = "A library that can be used to simulate ZZT worlds."
authors = ["Joshua Worth", "Rebecca Worth"]
license = "MIT"
edition = "2018"

[dependencies]
zzt_file_format = {path = "../zzt_file_format", version = "*"}
num = "0.2.0"
num-derive = "0.2.2"
num-traits = "0.2.5"
rand = "0.6.2"
lazy_static = "1.3.0"
