[package]
name = "zzt_web_editor"
version = "0.1.0"
authors = ["Joshua Worth"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
zzt_file_format = {path = "../zzt_file_format", version = "*"}
ruzzt_engine = {path = "../ruzzt_engine", version = "*"}

serde_json = "1.0.*"
wasm-bindgen = "0.2.42"
num = "0.2.0"
js-sys = "0.3.19"
